log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-status
          emptyDir: {}
        - name: log-output-config
          configMap:
            name: log-output-config
      containers:
        - name: log-writer
          image: davidsboteron/log-writer:1
          volumeMounts:
            - name: shared-status
              mountPath: /usr/src/app/files
        - name: log-reader
          image: davidsboteron/log-reader:4
          volumeMounts:
            - name: shared-status
              mountPath: /usr/src/app/files
            - name: log-output-config
              mountPath: /usr/src/app/config
