log_output/manifests/greeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v1
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: davidbotero/greeter:1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v2
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: davidbotero/greeter:1
---
# the service that log output calls, its traffic goes through the waypoint
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: exercises
  labels:
    istio.io/use-waypoint: waypoint
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-1
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-2
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter
  namespace: exercises
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: greeter-svc
      port: 3000
  rules:
    - backendRefs:
        - name: greeter-svc-1
          port: 3000
          weight: 75
        - name: greeter-svc-2
          port: 3000
          weight: 25
